Added puppets to Vagrant files's inventory.

--- a/puppet-ansible-test/Vagrantfile
+++ b/puppet-ansible-test/Vagrantfile
@@ -89,6 +89,12 @@ inventory_groups = {
     "creation",
     "revenge",
   ],
+  puppets: [
+    "blade",
+    "decapitron",
+    "pinhead",
+    "jester"
+  ]
 }
 
 Vagrant.configure("2") do |config|
