--- a/puppet-ansible-test/ansible.cfg
+++ b/puppet-ansible-test/ansible.cfg
@@ -1,9 +1,10 @@
 [defaults]
-inventory = ./inventory
+inventory = .vagrant/provisioners/ansible/inventory/vagrant_ansible_inventory
 roles_path = ./roles
 
-[privilege_escalation] 
+[privilege_escalation]
 become = True
+become_user = root
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o PasswordAuthentication=no
